Bug 166767 - Crash quiting LibreOffice with something on the clipboard (Win)
Summary: Crash quiting LibreOffice with something on the clipboard (Win)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Windows (All)
: medium critical
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
: 166792 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-28 18:23 UTC by Telesto
Modified: 2025-08-08 11:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-05-28 18:23:55 UTC
Description:
Crash quiting LibreOffice with something on the clipboard

Steps to Reproduce:
1. Open the attached file
2. Copy cell A1
3. CTRL+Q (File - Exit LibreOffice)

Actual Results:
Crash




Expected Results:
No crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 043b186d10fca4a613ce62c1e0d04f86ec63799c
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2025-05-28 18:25:37 UTC
Attachment is not needed

1. Type something into A1
2. Select Cell A1 (not the content)
3. CTRL+C
4. CTRL+Q
5. Don't save -> Crash
Comment 2 m_a_riosv 2025-05-28 21:01:53 UTC
For crash without do anything, only with a new spreadsheet [Ctrl+C]
Even in safe mode.

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 043b186d10fca4a613ce62c1e0d04f86ec63799c
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 25.2.4.1 (X86_64) / LibreOffice Community
Build ID: 09303ce8b49f86f106fccd32b1324662053027cc
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded
Comment 3 raal 2025-05-29 09:18:22 UTC
No repro on Linux, probably Windows only. Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5c74b979eac620dc1a435fcdf9e88488fd4217d9
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Xisco Faulí 2025-05-29 11:50:06 UTC
Regression introduced by:

commit d8ab8992bd35aedfc1d2b0debebab0d623aa8d09	[log]
author	Xisco Fauli <xiscofauli@libreoffice.org>	Mon May 26 11:06:06 2025 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Mon May 26 16:15:35 2025 +0200
tree c5b1996d4219ad5d3d5dd9769e2d6a32489c7f3a
parent b4460d983401e0b5962f71159016209e2d74d095 [diff]

ScViewData: pass ScDocShell by ref

Bisected with win64-25.8
Comment 5 Xisco Faulí 2025-05-29 11:51:02 UTC
it's surprising to see no unittest reported this issue...
Comment 6 Xisco Faulí 2025-05-29 21:16:53 UTC
Patch in https://gerrit.libreoffice.org/c/core/+/186025
Comment 7 Commit Notification 2025-05-29 22:23:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63597069fbb3209db1b4acd3c3e85b512b5d717c

tdf#166767: fix crash quiting LibreOffice with something on the clipboard

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2025-05-30 09:24:24 UTC
I guess we can close it now. Feedback and testing is appreciated!
Comment 9 Xisco Faulí 2025-05-30 11:53:32 UTC
*** Bug 166792 has been marked as a duplicate of this bug. ***
Comment 10 Piotr Osada 2025-05-31 10:42:11 UTC
Verified

No crash in steps from comment 1
And no crash in steps from bug 166792 comment 0

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: b559e6371c2abf5c75622f602da87f28ff499a91
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded

https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/2025-05-31_03.35.26/


Is there any risk of occurring similar behavior in the future, while there is no idea how to test it by unit test, for now?
(https://gerrit.libreoffice.org/c/core/+/186025)
Comment 11 Telesto 2025-05-31 11:25:39 UTC
(In reply to Piotr Osada from comment #10)
> Is there any risk of occurring similar behavior in the future, while there
> is no idea how to test it by unit test, for now?
> (https://gerrit.libreoffice.org/c/core/+/186025)

The answer is definitely: yes. This type of crash is not really uncommon. Occurred before, so it likely will occur in the future..
Comment 12 Commit Notification 2025-06-02 11:09:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d77a4927e34835160d64bf7249544a8ad6f43075

tdf#166767: sc_uicalc: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.