tdf#166767: fix crash quiting LibreOffice with something on the clipboard

No unittest caught this when

commit d8ab8992bd35aedfc1d2b0debebab0d623aa8d09
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Mon May 26 11:06:06 2025 +0200

    ScViewData: pass ScDocShell by ref

was executed on Jenkins so I don't know how to test it

Change-Id: I4570bb47af06390baabadf84d3513b5d10c7b4d0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186025
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins