sc/source/ui/app/transobj.cxx
@@ -100,7 +100,7 @@ void ScTransferObj::GetAreaSize( const ScDocument& rDoc, SCTAB nTab1, SCTAB nTab
 void ScTransferObj::PaintToDev( OutputDevice* pDev, ScDocument& rDoc, double nPrintFactor,
                                 const ScRange& rBlock )
 {
-    if (rDoc.GetMaxTableNumber() < 0)
+    if (!rDoc.GetDocumentShell())
         return;
 
     tools::Rectangle aBound( Point(), pDev->GetOutputSize() );      //! use size from clip area?
